# schnorr_curve25519_mcu

./: CMakeLists.txt  README.md  curve25519_donna.c  curve25519_helper.c  schnorr_curve25519_mcu.c
sha256/: check_config.h  config.h  sha256.c  sha256.h
